@@ -17,7 +17,6 @@ import java.util.Optional;
 import java.util.ServiceLoader;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 /**
  * A provider that can be loaded by by Java's ServiceLoader based on its name
@@ -181,7 +180,7 @@ public interface PlatformConfigNamedProvider {
                     // only throw an exception
                     List<String> providerNames = providers.stream()
                             .map(PlatformConfigNamedProvider::getPlatformConfigName)
-                            .collect(Collectors.toList());
+                            .toList();
                     throw new PowsyblException(
                             "Several " + clazz.getSimpleName() + " implementations found (" + providerNames
                                     + "), you must add configuration in PlatformConfig's module \""
